# graphedit-protobuf

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
src/main/proto/: lsp.proto
