find_package(protobuf CONFIG REQUIRED)
find_package(gRPC CONFIG REQUIRED)
find_package(Threads)
set(PROTO_FILES src/main/proto/lsp.proto)
add_library(graphedit_proto SHARED ${PROTO_FILES})
target_link_libraries(graphedit_proto PUBLIC protobuf::libprotobuf gRPC::grpc gRPC::grpc++)
target_include_directories(graphedit_proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${spdlog_SOURCE_DIR}/include)
get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
protobuf_generate(TARGET graphedit_proto LANGUAGE cpp)
protobuf_generate(TARGET graphedit_proto LANGUAGE grpc GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc PLUGIN "protoc-gen-grpc=${grpc_cpp_plugin_location}")
